--- a/src/pages/Model/index.css
+++ b/src/pages/Model/index.css
@@ -11,7 +11,7 @@
 }
 
 .tight-container div h2{
-    margin-bottom: 20px;
+    margin-bottom: 2.2%;
 }
 
 .message{
@@ -22,10 +22,10 @@
 
 
 .body{
-    padding-top: 10px;
+    padding-top: 0px;
 }
 
 .tight-body{
-    padding-top: 4x;
+    padding-top: 0x;
     margin-right: 0%;
 }
