--- a/src/pages/Model/Result/index.css
+++ b/src/pages/Model/Result/index.css
@@ -1,10 +1,10 @@
 #results-label{
-    margin-top: 30px;
-    margin-bottom: 12px;
+    margin-top: 2.8%;
+    margin-bottom: 1%;
 }
 
 .displayPic{
-    width: 500px;
+    width: 48%;
 }
 
 #pic2{
@@ -13,13 +13,12 @@
 
   
 .custom-button {
-    margin-top:12px;
+    margin-top:1%;
     background-color: #c7c7c7;
     color: #353535;
     border: none;
     border-radius: 25px;
     padding: 6px 12px;
-    margin-bottom: 10px; /* Space between buttons */
     font-size: 13px;
     font-weight: bold;
     cursor: pointer;
@@ -28,7 +27,7 @@
 
 #button2{
     margin-left: 3%;
-    margin-right: 72%;
+    margin-right: 72.5%;
 }
 
 #download{
