--- a/src/pages/Optimize/index.css
+++ b/src/pages/Optimize/index.css
@@ -1,3 +1,5 @@
+/* created by wl123, github name wl123 */
+
 #optimize-label{
     position: absolute;
     margin-top: 9%;
@@ -128,3 +130,4 @@ input[type="text"].rates {
 #optDownload .downloadIcon{
     width: 35px;
 }
+
